     on each nth bar (Nth1) starting at the 1st bar, or after nth bars (Nth2).
     Following trigger conditions are available:
     - Pl (Play each nth bar)
     - Mu (Mute each nth bar)
     - Ac (Accent each nth bar)
     - Ro (Roll each nth bar)
     - Fx (enable Fx each nth bar)
     - Nx (don't enable Fx each nth bar)


MIDIboxSEQ V4.087
~~~~~~~~~~~~~~~~~

   o new page: "Track Instrument"
     Can be selected with MENU->EVNT->Trk Inst (GP #8) or from the main page (after Track Event item)
     Allows to configure the MIDI port, channel and instrument name.

   o the new Track Instrument page also allows to select Program Change and Bank (Low/High byte)
     If activated, these parameters will be sent when the sequencer is started and on pattern changes.
     Please note: a program and bank change can stall your synth so that the first note could be delayed!
     Use this function only when the device can handle patch changes quickly!

   o added CV_GATE_SR1 and CLK_SR to MBSEQ_HW.V4 config
     This is the prefered option to add CV gates and DIN clock/start signals to your MIDIbox SEQ in future.
     See also updated http://www.ucapps.de/midibox_seq_manual_hw.html

   o 8 individual DIN Sync clock outputs with individual divider and pulsewidth values are
     provided now. A clock output can optionally be turned to a Start/Stop output.
     The outputs are available at the configured CLK_SR DOUT shift register pin D7..D0
     (D7=first output, D6=second output, etc...)
     The clock parameters can be configured in the CV configuration page.

   o Mixer page: channel events can be dumped by pressing the corresponding GP button.
     This also allows to prepare different mixer setups, sending to the same channel, triggered
     by a GP button

   o Mixer page: press SELECT to activate/deactivate "live sending" mode (values are sent
     while moving an encoder)

   o Mute page: the synchronized mute/unmute option can be temporary overruled by activating